# VA-Crime-Data-Explorer

./: .gitignore  Makefile  README.md  docker-compose.yml
data-etl/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  commit_message.py  setup.py
data-etl/etl/: main.py
data-etl/etl/cockroach/: client.py  main.py
data-etl/etl/models/: TableFieldDataClass.py
data-etl/scripts/: start-spark.sh
spark-bulk-data/: Pipfile
spark_bulk_data/: .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  commit_message.py  crdb-copy-certs.sh  pyproject.toml  setup.py
spark_bulk_data/docs/: data.md  setup.md
spark_bulk_data/spark_bulk_data/: config.py  main.py
spark_bulk_data/spark_bulk_data/cockroach/: client.py  main.py
spark_bulk_data/spark_bulk_data/models/tables/: __init__.py  agencies.py  nibrs_arrestee.py  nibrs_assignment_type.py  nibrs_bias_motivation.py  nibrs_criminal_act_type.py  nibrs_drug_measure_type.py  nibrs_ethnicity.py  nibrs_offender.py  nibrs_prop_desc_type.py  nibrs_property_desc.py  nibrs_suspected_drug.py  nibrs_using_list.py  nibrs_victim_circumstances.py  nibrs_victim_injury.py  nibrs_victim_offender_rel.py  nibrs_victim_type.py  nibrs_weapon_type.py  ref_race.py  ref_state.py
spark_bulk_data/spark_bulk_data/utils/: data_prep.py  data_reader.py  relationship.py  spark_client.py  spark_data_reader.py  spark_runner.py
spark_bulk_data/tests/unit/: test_data_reader.py  test_spark_runner.py
spark_bulk_data/tests/unit/data/: sample_csv_data.csv
va-crime-data-dashboard/: README.md  package.json
(+28 files in other folders)
