[tool.poetry]
name = "spark_bulk_data"
version = "0.1.0"
description = "Download VA Crime Data To CockroackDB using PySpark"
authors = ["Ydot19 <abdalhalim.yaadata@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "2.9.3"
pyspark = "3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
pytest-cov = "^3.0.0"
black = "^22.1.0"
pre-commit = "^2.17.0"
pytest-xdist = "^2.5.0"
python-dotenv = "^0.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
